# jwlibrary

./: .gitignore  drawer.c  home.c  home.h  main.c  main.h  meson.build  navigation.c  stack.c  stack.h  text
gui/: drawer.c  drawer.h  meson.build  navbar.c  navbar.h  navigation.c  navigation.h  shared.h  stack.c  stack.h  window.c  window.h  winstack.c  winstack.h
reader/: meson.build  parser.c  parser.h
res/: gresources.xml  meson.build
res/css/: style.css  styles.css
